Fix: keyboard navigates context menu in collection will move two items

BUG: 307794
FIXED-IN: 2.8